crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__call_type_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 34
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found [i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 20
              },
              "end": {
                "line": 3,
                "character": 33
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        }
      ]
    }
  ]
}
