crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__func_results_incorrect.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 7
        },
        "end": {
          "line": 5,
          "character": 8
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 7
        },
        "end": {
          "line": 9,
          "character": 8
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 10
              },
              "end": {
                "line": 7,
                "character": 26
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 7
        },
        "end": {
          "line": 13,
          "character": 8
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, i32, i32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 15
        },
        "end": {
          "line": 17,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, i32, f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 17,
                "character": 4
              },
              "end": {
                "line": 17,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
