crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__global_results_correct.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 26
        },
        "end": {
          "line": 6,
          "character": 26
        }
      },
      "severity": 1,
      "code": "syntax/value-type",
      "source": "wat",
      "message": "syntax error: expected value type"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "severity": 1,
      "code": "const-expr",
      "source": "wat",
      "message": "expression must be constant"
    }
  ]
}
