crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__less_operands.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 27
        },
        "end": {
          "line": 0,
          "character": 50
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32]"
    }
  ]
}
