crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__less_operands_on_stack.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 8
        },
        "end": {
          "line": 4,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32]"
    }
  ]
}
