crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__local_type_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 8
        },
        "end": {
          "line": 3,
          "character": 45
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 17
              },
              "end": {
                "line": 3,
                "character": 30
              }
            }
          },
          "message": "expected type `i32`, found `i64`"
        }
      ]
    }
  ]
}
