crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__mixed_type_mismatch_from_instr_sig.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 38
        },
        "end": {
          "line": 3,
          "character": 45
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 22
              },
              "end": {
                "line": 3,
                "character": 37
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
